blogs js file added

--- a/blogs.html
+++ b/blogs.html
@@ -33,17 +33,18 @@
     <!-- header section start -->
     <header class="mt-6">
         <nav class="bg-white rounded-2xl px-6 py-4 w-11/12 mx-auto flex flex-row items-center justify-between">
-           <div class="flex flex-row justify-start items-center gap-1">
-            <div>
-                <img class="w-12" src="assets/logo.png" alt="">
+            <div class="flex flex-row justify-start items-center gap-1">
+                <div>
+                    <img class="w-12" src="assets/logo.png" alt="">
+                </div>
+                <div>
+                    <h2 class="text-4xl font-normal">Dev<span class="font-bold">Board</span></h2>
+                </div>
             </div>
-            <div>
-                <h2 class="text-4xl font-normal">Dev<span class="font-bold">Board</span></h2>
+            <div class="">
+                <button id="back-to-desk-btn"
+                    class="btn text-base font-medium rounded-lg text-white bg-blue py-2 px-5">Back to Desk</button>
             </div>
-           </div>
-           <div class="">
-            <a href="index.html"><button class="btn text-base font-medium rounded-lg text-white bg-blue py-2 px-5">Back to Desk</button></a>
-           </div> 
         </nav>
     </header>
     <!-- header section end -->
@@ -54,15 +55,17 @@
             <div class="w-full">
                 <div class="bg-white rounded-2xl p-6">
                     <div class="flex flex-col gap-4 justify-center items-start">
-                        <h3 class="text-2xl font-medium text-dark-teal pb-4">Question-1: What are the different ways to select an element in the DOM? </h3>
+                        <h3 class="text-2xl font-medium text-dark-teal pb-4">Question-1: What are the different ways to
+                            select an element in the DOM? </h3>
                     </div>
                     <div class="border-t-2 border-dashed border-[#3751fd14]">
-                        <p class="text-base font-normal text-dark bg-white rounded-lg py-4 mb-3 ">Here different ways to select an element in the DOM <br>
-                          1. document. getElementById(),
-                          2. document. getElementsByClassName(),
-                          3. document. getElementsByTagName(),
-                          4. document. querySelector(),
-                          5. document. querySelectorAll() 
+                        <p class="text-base font-normal text-dark bg-white rounded-lg py-4 mb-3 ">Here different ways to
+                            select an element in the DOM <br>
+                            1. document. getElementById(),
+                            2. document. getElementsByClassName(),
+                            3. document. getElementsByTagName(),
+                            4. document. querySelector(),
+                            5. document. querySelectorAll()
                         </p>
                     </div>
                 </div>
@@ -70,10 +73,19 @@
             <div class="w-full">
                 <div class="bg-white rounded-2xl p-6">
                     <div class="flex flex-col gap-4 justify-center items-start">
-                        <h3 class="text-2xl font-medium text-dark-teal pb-4">Question-2: What is the difference between innerHTML, innerText, and textContent ?</h3>
+                        <h3 class="text-2xl font-medium text-dark-teal pb-4">Question-2: What is the difference between
+                            innerHTML, innerText, and textContent ?</h3>
                     </div>
                     <div class="border-t-2 border-dashed border-[#3751fd14]">
-                        <p class="text-base font-normal text-dark bg-white rounded-lg py-4 mb-3 ">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Aperiam non porro consequatur debitis labore excepturi cumque, doloribus sint? Pariatur architecto cum nostrum, sint fuga quam dolorem minus a qui? Et? 
+                        <p class="text-base font-normal text-dark bg-white rounded-lg py-4 mb-3 ">The innerHTML,
+                            innerText, and textContent are used to manipulate the content of elements in the DOM. They
+                            might seem similar bus important differences in their behavior and use case. Here some short
+                            differences<br>
+                            innerHTML: Gets or sets the HTML content of an element including tag.<br>
+                            innerText: Gets or sets visible text content, considering CSS.<br>
+                            textContent: Gets or sets the text content ignoring HTML tags and CSS.including hidden
+                            text.<br>
+
                         </p>
                     </div>
                 </div>
@@ -81,10 +93,14 @@
             <div class="w-full">
                 <div class="bg-white rounded-2xl p-6">
                     <div class="flex flex-col gap-4 justify-center items-start">
-                        <h3 class="text-2xl font-medium text-dark-teal pb-4">Question-3: What is event delegation in the DOM?</h3>
+                        <h3 class="text-2xl font-medium text-dark-teal pb-4">Question-3: What is event delegation in the
+                            DOM?</h3>
                     </div>
                     <div class="border-t-2 border-dashed border-[#3751fd14]">
-                        <p class="text-base font-normal text-dark bg-white rounded-lg py-4 mb-3 ">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Aperiam non porro consequatur debitis labore excepturi cumque, doloribus sint? Pariatur architecto cum nostrum, sint fuga quam dolorem minus a qui? Et? 
+                        <p class="text-base font-normal text-dark bg-white rounded-lg py-4 mb-3 ">Lorem, ipsum dolor sit
+                            amet consectetur adipisicing elit. Aperiam non porro consequatur debitis labore excepturi
+                            cumque, doloribus sint? Pariatur architecto cum nostrum, sint fuga quam dolorem minus a qui?
+                            Et?
                         </p>
                     </div>
                 </div>
@@ -92,10 +108,14 @@
             <div class="w-full">
                 <div class="bg-white rounded-2xl p-6">
                     <div class="flex flex-col gap-4 justify-center items-start">
-                        <h3 class="text-2xl font-medium text-dark-teal pb-4">Question-4: What is event bubbling in the DOM?</h3>
+                        <h3 class="text-2xl font-medium text-dark-teal pb-4">Question-4: What is event bubbling in the
+                            DOM?</h3>
                     </div>
                     <div class="border-t-2 border-dashed border-[#3751fd14]">
-                        <p class="text-base font-normal text-dark bg-white rounded-lg py-4 mb-3 ">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Aperiam non porro consequatur debitis labore excepturi cumque, doloribus sint? Pariatur architecto cum nostrum, sint fuga quam dolorem minus a qui? Et? 
+                        <p class="text-base font-normal text-dark bg-white rounded-lg py-4 mb-3 ">Lorem, ipsum dolor sit
+                            amet consectetur adipisicing elit. Aperiam non porro consequatur debitis labore excepturi
+                            cumque, doloribus sint? Pariatur architecto cum nostrum, sint fuga quam dolorem minus a qui?
+                            Et?
                         </p>
                     </div>
                 </div>
@@ -103,10 +123,14 @@
             <div class="w-full">
                 <div class="bg-white rounded-2xl p-6">
                     <div class="flex flex-col gap-4 justify-center items-start">
-                        <h3 class="text-2xl font-medium text-dark-teal pb-4">Question-5: How do you create, add, and remove elements using JavaScript?</h3>
+                        <h3 class="text-2xl font-medium text-dark-teal pb-4">Question-5: How do you create, add, and
+                            remove elements using JavaScript?</h3>
                     </div>
                     <div class="border-t-2 border-dashed border-[#3751fd14]">
-                        <p class="text-base font-normal text-dark bg-white rounded-lg py-4 mb-3 ">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Aperiam non porro consequatur debitis labore excepturi cumque, doloribus sint? Pariatur architecto cum nostrum, sint fuga quam dolorem minus a qui? Et? 
+                        <p class="text-base font-normal text-dark bg-white rounded-lg py-4 mb-3 ">Lorem, ipsum dolor sit
+                            amet consectetur adipisicing elit. Aperiam non porro consequatur debitis labore excepturi
+                            cumque, doloribus sint? Pariatur architecto cum nostrum, sint fuga quam dolorem minus a qui?
+                            Et?
                         </p>
                     </div>
                 </div>
@@ -114,6 +138,15 @@
         </section>
     </main>
     <!-- main section end -->
+
+    <!-- scripts link -->
+    <script>
+        // connect main page with back-to-desk-btn in blog page
+        document.getElementById('back-to-desk-btn').addEventListener("click", function () {
+            window.location.href = "index.html"
+        })
+    </script>
+    <script src="./Js/blogs.js"></script>
 
 </body>
 
