--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
 <body class="poppins-font bg-light-sky mx-0">
     <!-- header section start -->
-    <header class="mt-6">
+    <header class="mt-4">
         <nav class="bg-white rounded-2xl px-6 py-4 w-11/12 mx-auto flex flex-row items-center justify-between">
            <div class="flex flex-row justify-start items-center gap-1">
             <div>
@@ -59,11 +59,11 @@
     <!-- header section end -->
     <!-- main section start -->
     <main>
-        <section class="py-4 w-11/12 mx-auto flex flex-row items-center justify-between gap-6">
+        <section class="py-4 w-11/12 mx-auto flex flex-row items-center justify-between gap-4">
             <div class="bg-white rounded-2xl w-10/12 mb-10 h-[930px]">
                 <div class="grid grid-cols-4 gap-6 border-b-2 border-dashed border-[#3751fd14] p-6">
                     <!-- task Assigned box -->
-                    <div class="bg-light-sky rounded-xl p-8 flex flex-row justify-between items-center gap-4">
+                    <div class="bg-light-sky rounded-xl p-3 flex flex-row justify-between items-center gap-4">
                         <div class="bg-white rounded-full">
                             <img class="p-4" src="assets/checkbox.png" alt="">
                         </div>
@@ -73,16 +73,16 @@
                         </div>
                     </div>
                     <!-- discover something box -->
-                    <div class="bg-gradient-to-r from-[#3752FD] via-[#6C7FFA]  to-[#9BA8F8] rounded-xl p-8 flex flex-row justify-center items-center gap-5 col-span-2">
+                    <div class="bg-gradient-to-r from-[#3752FD] via-[#6C7FFA]  to-[#9BA8F8] rounded-xl p-3 flex flex-row justify-center items-center gap-5 col-span-2">
                         <div class="">
                             <img class="p-4" src="assets/board.png" alt="">
                         </div>
                         <div>
-                            <a class="text-white text-2xl font-medium" href="blogs.html">Discover Something <br> New Today!</a>
+                            <p id="discover-something" class="text-white text-2xl font-medium">Discover Something <br> New Today!</p>
                         </div>
                     </div>
                     <!-- date box -->
-                    <div class="bg-light-sky rounded-xl p-8 flex flex-row justify-between items-center gap-4">
+                    <div class="bg-light-sky rounded-xl p-3 flex flex-row justify-between items-center gap-4">
                         <div class="bg-white rounded-full">
                             <img class="p-4" src="assets/calender.png" alt="">
                         </div>
