everything almost done

--- a/blogs.html
+++ b/blogs.html
@@ -97,10 +97,7 @@
                             DOM?</h3>
                     </div>
                     <div class="border-t-2 border-dashed border-[#3751fd14]">
-                        <p class="text-base font-normal text-dark bg-white rounded-lg py-4 mb-3 ">Lorem, ipsum dolor sit
-                            amet consectetur adipisicing elit. Aperiam non porro consequatur debitis labore excepturi
-                            cumque, doloribus sint? Pariatur architecto cum nostrum, sint fuga quam dolorem minus a qui?
-                            Et?
+                        <p class="text-base font-normal text-dark bg-white rounded-lg py-4 mb-3 ">Event delegation is a technique where a single event listener is attached to a parent element to handle events for its child elements, leveraging event bubbling. It helps efficiently manage events, especially for dynamically added elements.
                         </p>
                     </div>
                 </div>
@@ -112,10 +109,7 @@
                             DOM?</h3>
                     </div>
                     <div class="border-t-2 border-dashed border-[#3751fd14]">
-                        <p class="text-base font-normal text-dark bg-white rounded-lg py-4 mb-3 ">Lorem, ipsum dolor sit
-                            amet consectetur adipisicing elit. Aperiam non porro consequatur debitis labore excepturi
-                            cumque, doloribus sint? Pariatur architecto cum nostrum, sint fuga quam dolorem minus a qui?
-                            Et?
+                        <p class="text-base font-normal text-dark bg-white rounded-lg py-4 mb-3 ">Event bubbling is a DOM event propagation mechanism where an event starts from the target element and bubbles up to its parent elements, triggering their event listeners. It allows parent elements to handle events from their child elements.
                         </p>
                     </div>
                 </div>
@@ -127,10 +121,11 @@
                             remove elements using JavaScript?</h3>
                     </div>
                     <div class="border-t-2 border-dashed border-[#3751fd14]">
-                        <p class="text-base font-normal text-dark bg-white rounded-lg py-4 mb-3 ">Lorem, ipsum dolor sit
-                            amet consectetur adipisicing elit. Aperiam non porro consequatur debitis labore excepturi
-                            cumque, doloribus sint? Pariatur architecto cum nostrum, sint fuga quam dolorem minus a qui?
-                            Et?
+                        <p class="text-base font-normal text-dark bg-white rounded-lg py-4 mb-3 ">To create an element, use document.createElement("tagName').<br> 
+                        To add it, use
+                        parentElement.appendChild(newElement).<br>
+                        To remove it, use
+                        parentElement.removeChild(childElement).
                         </p>
                     </div>
                 </div>
