--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
                                 <h4 class="text-base font-medium">21 March 2025</h4>
                             </div>
                             <div>
-                                <button class="completed-btn btn text-base font-medium rounded-lg text-white bg-blue py-2 px-5">Completed</button>
+                                <button value="1" class="completed-btn btn text-base font-medium rounded-lg text-white bg-blue py-2 px-5">Completed</button>
                             </div>
                         </div>
                     </div>
@@ -123,7 +123,7 @@
                                 <h4 class="text-base font-medium">21 March 2025</h4>
                             </div>
                             <div>
-                                <button class="completed-btn btn text-base font-medium rounded-lg text-white bg-blue py-2 px-5">Completed</button>
+                                <button value="1" class="completed-btn btn text-base font-medium rounded-lg text-white bg-blue py-2 px-5">Completed</button>
                             </div>
                         </div>
                     </div>
@@ -140,7 +140,7 @@
                                 <h4 class="text-base font-medium">21 March 2025</h4>
                             </div>
                             <div>
-                                <button class="completed-btn btn text-base font-medium rounded-lg text-white bg-blue py-2 px-5">Completed</button>
+                                <button value="1" class="completed-btn btn text-base font-medium rounded-lg text-white bg-blue py-2 px-5">Completed</button>
                             </div>
                         </div>
                     </div>
@@ -157,7 +157,7 @@
                                 <h4 class="text-base font-medium">21 March 2025</h4>
                             </div>
                             <div>
-                                <button class="completed-btn btn text-base font-medium rounded-lg text-white bg-blue py-2 px-5">Completed</button>
+                                <button value="1" class="completed-btn btn text-base font-medium rounded-lg text-white bg-blue py-2 px-5">Completed</button>
                             </div>
                         </div>
                     </div>
@@ -174,7 +174,7 @@
                                 <h4 class="text-base font-medium">21 March 2025</h4>
                             </div>
                             <div>
-                                <button class="completed-btn btn text-base font-medium rounded-lg text-white bg-blue py-2 px-5">Completed</button>
+                                <button value="1" class="completed-btn btn text-base font-medium rounded-lg text-white bg-blue py-2 px-5">Completed</button>
                             </div>
                         </div>
                     </div>
@@ -191,7 +191,7 @@
                                 <h4 class="text-base font-medium">21 March 2025</h4>
                             </div>
                             <div>
-                                <button class="completed-btn btn text-base font-medium rounded-lg text-white bg-blue py-2 px-5">Completed</button>
+                                <button value="1" class="completed-btn btn text-base font-medium rounded-lg text-white bg-blue py-2 px-5">Completed</button>
                             </div>
                         </div>
                     </div>
