some modification added

--- a/blogs.html
+++ b/blogs.html
@@ -79,7 +79,7 @@
                     <div class="border-t-2 border-dashed border-[#3751fd14]">
                         <p class="text-base font-normal text-dark bg-white rounded-lg py-4 mb-3 ">The innerHTML,
                             innerText, and textContent are used to manipulate the content of elements in the DOM. They
-                            might seem similar bus important differences in their behavior and use case. Here some short
+                            might seem similar but important differences in their behavior and use case. Here some short
                             differences<br>
                             innerHTML: Gets or sets the HTML content of an element including tag.<br>
                             innerText: Gets or sets visible text content, considering CSS.<br>
@@ -109,7 +109,7 @@
                             DOM?</h3>
                     </div>
                     <div class="border-t-2 border-dashed border-[#3751fd14]">
-                        <p class="text-base font-normal text-dark bg-white rounded-lg py-4 mb-3 ">Event bubbling is a DOM event propagation mechanism where an event starts from the target element and bubbles up to its parent elements, triggering their event listeners. It allows parent elements to handle events from their child elements.
+                        <p class="text-base font-normal text-dark bg-white rounded-lg py-4 mb-3 ">Event bubbling in the DOM event propagation mechanism where an event starts from the target element and bubbles up to its parent elements, triggering their event listeners. It allows parent elements to handle events from their child elements.
                         </p>
                     </div>
                 </div>
