--- a/index.html
+++ b/index.html
@@ -59,11 +59,11 @@
     <!-- header section end -->
     <!-- main section start -->
     <main>
-        <section class="py-4 w-11/12 mx-auto flex flex-row items-center justify-between gap-4">
-            <div class="bg-white rounded-2xl w-10/12 mb-10 h-[930px]">
-                <div class="grid grid-cols-4 gap-6 border-b-2 border-dashed border-[#3751fd14] p-6">
+        <section class="py-4 w-11/12  mx-auto flex flex-row items-center justify-between gap-4 h-[900px]">
+            <div class="bg-white rounded-2xl w-10/12 h-full">
+                <div class="grid grid-cols-4 gap-6 border-b-2 border-dashed border-[#3751fd14] p-4">
                     <!-- task Assigned box -->
-                    <div class="bg-light-sky rounded-xl p-3 flex flex-row justify-between items-center gap-4">
+                    <div class="bg-light-sky rounded-xl p-3 flex flex-row justify-around items-center gap-2">
                         <div class="bg-white rounded-full">
                             <img class="p-4" src="assets/checkbox.png" alt="">
                         </div>
@@ -82,7 +82,7 @@
                         </div>
                     </div>
                     <!-- date box -->
-                    <div class="bg-light-sky rounded-xl p-3 flex flex-row justify-between items-center gap-4">
+                    <div class="bg-light-sky rounded-xl p-3 flex flex-row justify-around items-center gap-2">
                         <div class="bg-white rounded-full">
                             <img class="p-4" src="assets/calender.png" alt="">
                         </div>
@@ -92,13 +92,15 @@
                     </div>
                 </div>
                 <!-- all card boxes start -->
-                <div class="grid grid-cols-3 gap-9 p-6">
+                <div class="grid grid-cols-3 gap-6 p-4">
                     <!-- ShopEase card box -->
                     <div class="bg-light-sky rounded-2xl p-6">
                         <div class="flex flex-col gap-4 justify-center items-start">
                             <button class="btn text-base font-medium rounded-lg text-dark bg-white py-2 px-5 ">ShopEase</button>
                             <h3 class="task-title text-2xl font-medium text-dark-teal">Fix Mobile Button Issue </h3>
-                            <p class="text-base font-normal text-dark bg-white rounded-lg p-4 mb-3">Debug using Chrome DevTools, check for overlapping...</p>
+                            <div class="bg-white rounded-lg p-3 mb-3">
+                                <p class="text-base font-normal text-dark line-clamp-2 ">Debug using Chrome DevTools, check for overlapping elements, and ensure onClick works properly and ensure onClick works properly</p>
+                            </div>
                         </div>
                         <div class="flex flex-row justify-between items-center border-t-2 border-dashed border-[#3751fd14] py-3">
                             <div>
@@ -115,7 +117,9 @@
                         <div class="flex flex-col gap-4 justify-center items-start">
                             <button class="btn text-base font-medium rounded-lg text-dark bg-white py-2 px-5 ">CloudSync</button>
                             <h3 class="task-title text-2xl font-medium text-dark-teal">Add Dark Mode </h3>
-                            <p class="text-base font-normal text-dark bg-white rounded-lg p-4 mb-3">Store the user's preference in localStorage, update CSS varia...</p>
+                            <div class="bg-white rounded-lg p-3 mb-3">
+                                <p class="text-base font-normal text-dark line-clamp-2 ">Store the user's preference in localStorage, update CSS variables dynamically, and apply a smooth transition effect.</p>
+                            </div>
                         </div>
                         <div class="flex flex-row justify-between items-center border-t-2 border-dashed border-[#3751fd14] py-3">
                             <div>
@@ -132,7 +136,9 @@
                         <div class="flex flex-col gap-4 justify-center items-start">
                             <button class="btn text-base font-medium rounded-lg text-dark bg-white py-2 px-5 ">SwiftPay</button>
                             <h3 class="task-title text-2xl font-medium text-dark-teal">Optimize  Home page  </h3>
-                            <p class="text-base font-normal text-dark bg-white rounded-lg p-4 mb-3">SDebug using Chrome DevTools, check for overlappin...</p>
+                            <div class="bg-white rounded-lg p-3 mb-3">
+                                <p class="text-base font-normal text-dark line-clamp-2 ">Debug using Chrome DevTools, check for overlapping elements, and ensure onClick works properly and ensure onClick works properly</p>
+                            </div>
                         </div>
                         <div class="flex flex-row justify-between items-center border-t-2 border-dashed border-[#3751fd14] py-3">
                             <div>
@@ -149,7 +155,9 @@
                         <div class="flex flex-col gap-4 justify-center items-start">
                             <button class="btn text-base font-medium rounded-lg text-dark bg-white py-2 px-5 ">Meta</button>
                             <h3 class="task-title text-2xl font-medium text-dark-teal">Add new emoji 🤲 </h3>
-                            <p class="text-base font-normal text-dark bg-white rounded-lg p-4 mb-3">Debug using Chrome DevTools, check for overlappin...</p>
+                            <div class="bg-white rounded-lg p-3 mb-3">
+                                <p class="text-base font-normal text-dark line-clamp-2 ">Debug using Chrome DevTools, check for overlapping elements, and ensure onClick works properly and ensure onClick works properly</p>
+                            </div>
                         </div>
                         <div class="flex flex-row justify-between items-center border-t-2 border-dashed border-[#3751fd14] py-3">
                             <div>
@@ -166,7 +174,9 @@
                         <div class="flex flex-col gap-4 justify-center items-start">
                             <button class="btn text-base font-medium rounded-lg text-dark bg-white py-2 px-5 ">Google LLC</button>
                             <h3 class="task-title text-2xl font-medium text-dark-teal">Integrate OpenAI API </h3>
-                            <p class="text-base font-normal text-dark bg-white rounded-lg p-4 mb-3">Store the user's preference in localStorage, update CSS varia...</p>
+                            <div class="bg-white rounded-lg p-3 mb-3">
+                                <p class="text-base font-normal text-dark line-clamp-2 ">Debug using Chrome DevTools, check for overlapping elements, and ensure onClick works properly and ensure onClick works properly</p>
+                            </div>
                         </div>
                         <div class="flex flex-row justify-between items-center border-t-2 border-dashed border-[#3751fd14] py-3">
                             <div>
@@ -183,7 +193,9 @@
                         <div class="flex flex-col gap-4 justify-center items-start">
                             <button class="btn text-base font-medium rounded-lg text-dark bg-white py-2 px-5 ">Glassdoar</button>
                             <h3 class="task-title text-2xl font-medium text-dark-teal">Improve Job searching</h3>
-                            <p class="text-base font-normal text-dark bg-white rounded-lg p-4 mb-3">Debug using Chrome DevTools, check for overlappi...</p>
+                            <div class="bg-white rounded-lg p-3 mb-3">
+                                <p class="text-base font-normal text-dark line-clamp-2 ">Debug using Chrome DevTools, check for overlapping elements, and ensure onClick works properly and ensure onClick works properly</p>
+                            </div>
                         </div>
                         <div class="flex flex-row justify-between items-center border-t-2 border-dashed border-[#3751fd14] py-3">
                             <div>
@@ -197,7 +209,7 @@
                     </div>
                 </div>
             </div>
-            <div class="bg-white rounded-2xl p-6 w-2/12 flex flex-col gap-4 mb-14 h-[930px]">
+            <div class="bg-white rounded-2xl p-4 w-2/12 flex flex-col gap-4  h-full">
                 <div class="flex flex-row justify-center items-center gap-4">
                     <div>
                         <img src="assets/activity.png" alt="">
