--- a/blogs.html
+++ b/blogs.html
@@ -97,7 +97,7 @@
                             DOM?</h3>
                     </div>
                     <div class="border-t-2 border-dashed border-[#3751fd14]">
-                        <p class="text-base font-normal text-dark bg-white rounded-lg py-4 mb-3 ">Event delegation is a technique where a single event listener is attached to a parent element to handle events for its child elements, leveraging event bubbling. It helps efficiently manage events, especially for dynamically added elements.
+                        <p class="text-base font-normal text-dark bg-white rounded-lg py-4 mb-3 ">Event delegation is a technique where a single event listener is attached to a parent element to handle events for its child elements, leveraging event bubbling. It helps manage events, especially for dynamically added elements.
                         </p>
                     </div>
                 </div>
